<resources>
    <string name="app_name">Discount Cards</string>
    <string name="title_activity_main2">Discount Cards Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">john.doe@domain.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cardslist">Cards</string>
    <string name="title_activity_add">Add a Discount Card</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_card_title">Add a new card</string>
    <string name="select_shop">Select shop</string>
    <string name="select_discount">Choose Discount (%)</string>
    <string name="expiry_date">Choose Expiry Date</string>
    <string name="menu_cardsview">Cards View</string>
    <string name="menu_backup">Backup</string>
    <string name="local_export">Local Export</string>
    <string name="local_import">Local Import</string>
    <string name="online_backup">Online Backup</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="title_activity_show_details">ShowDetails</string>
    <string name="card_details">Card Details</string>
    <string name="find_a_shop_nearby">Find a shop nearby</string>
    <string name="default_discount">0%</string>
    <string name="new_user">New User</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="birthdate">Birthdate</string>
    <string name="shop_admin">Shop Admin</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_type">Shop Type</string>
    <string name="logo_url_if_known">Logo URL (if known)</string>
    <string name="edit_selected_shop">Edit selected shop</string>
    <string name="add_new_shop">Add new shop</string>
    <string name="local_export_csv">Local Export CSV</string>
    <string name="local_export_json">Local Export JSON</string>
    <string name="local_import_csv">Local import csv</string>
    <string name="local_import_json">Local import json</string>
    <string name="partner_shops">Partner shops</string>
    <string name="local_import_xml">Local import xml</string>
    <string name="local_export_xml">Local export xml</string>
    <string name="textview">TextView</string>
    <string name="date_format">dd/mm/yyy</string>
</resources>