<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <EditText
        android:hint="@string/first_name"
        android:id="@+id/editFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:hint="@string/last_name"
        android:id="@+id/editLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/editFirstName"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/e_mail_address"
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_below="@id/editLastName"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/birthdate"
        android:id="@+id/editBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/editEmail"
        android:layout_alignParentStart="true" />


</RelativeLayout>