<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.shopadmin.ShopAdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSelectShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:labelFor="@id/shopSpinner"
            android:text="@string/select_shop"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/shopSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="shop"
            android:entries="@array/shop_list"
            android:textAlignment="center" />

        <EditText
            android:hint="@string/shop_name"
            android:id="@+id/editShopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:hint="@string/shop_type"
            android:id="@+id/editShopType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:hint="@string/logo_url_if_known"
            android:id="@+id/editLogoURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/editShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_selected_shop" />

            <Button
                android:id="@+id/addShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/perfectBlue"
                android:text="@string/add_new_shop" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>