<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_cardsview"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cardslist"
            android:visible="true"/>

        <item
            android:id="@+id/nav_cardslist"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cardslist"
            android:visible="true"/>

        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_backup"
            android:visible="true"/>

        <item
            android:id="@+id/nav_shop_admin"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/shop_admin"
            android:visible="false"/>

    </group>
</menu>