<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.backup.BackupFragment">

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/local_export_csv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/local_export_csv"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/local_export_json"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/local_export_json"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/local_export_xml"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Local export xml"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/local_import_csv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/local_import_csv"
        android:textAlignment="center"
        android:backgroundTint="#F36868"
        android:textSize="20sp" />

    <Button
        android:id="@+id/local_import_json"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/local_import_json"
        android:textAlignment="center"
        android:backgroundTint="#F36868"
        android:textSize="20sp" />

    <Button
        android:id="@+id/local_import_xml"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Local import xml"
        android:textAlignment="center"
        android:backgroundTint="#F36868"
        android:textSize="20sp" />


</LinearLayout>