<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <TextView
        android:id="@+id/txtDiscountValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:labelFor="@id/discountValue"
        android:text="@string/select_discount"
        android:textAlignment="center"
        android:textSize="25sp" />

    <com.android_enterprises.discountcards.ui.controls.MySeekBar
        android:id="@+id/discountValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:max="100"
        android:layout_below="@id/txtDiscountValue"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/txtExpiryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:text="@string/expiry_date"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_below="@id/discountValue"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="@string/date_format"
        android:id="@+id/expiryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints="no"
        android:ems="10"
        android:inputType="date"
        android:textAlignment="center"
        android:layout_below="@id/txtExpiryDate"
        android:layout_alignParentStart="true" />


</RelativeLayout>