<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSelectShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:labelFor="@id/shopSpinner"
            android:text="@string/select_shop"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/shopSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="shop"
            android:entries="@array/shop_list"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtDiscountValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:labelFor="@id/discountValue"
            android:text="@string/select_discount"
            android:textAlignment="center"
            android:textSize="25sp" />

        <com.android_enterprises.discountcards.ui.controls.MySeekBar
            android:id="@+id/discountValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:max="100"/>


        <TextView
            android:id="@+id/txtExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:labelFor="@id/expiryDate"
            android:text="@string/expiry_date"
            android:textAlignment="center"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/expiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints="no"
            android:ems="10"
            android:inputType="date"
            android:textAlignment="center" />
    </LinearLayout>

</FrameLayout>